tests/ui/let-else/let-else-ref-bindings.stderr
error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:16:38
   |
LL |     let Some(ref a): Option<&[u8]> = some else { return };
   |                                      ^^^^ expected `Option<&[u8]>`, found `Option<Vec<u8>>`
   |
   = note: expected enum `Option<&[u8]>`
              found enum `Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:20:38
   |
LL |     let Some(ref a): Option<&[u8]> = &some else { return };
   |                                      ^^^^^ expected `Option<&[u8]>`, found `&Option<Vec<u8>>`
   |
   = note:   expected enum `Option<&[u8]>`
           found reference `&Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:24:34
   |
LL |     let Some(a): Option<&[u8]> = some else { return };
   |                  -------------   ^^^^ expected `Option<&[u8]>`, found `Option<Vec<u8>>`
   |                  |
   |                  expected due to this
   |
   = note: expected enum `Option<&[u8]>`
              found enum `Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:27:34
   |
LL |     let Some(a): Option<&[u8]> = &some else { return };
   |                  -------------   ^^^^^ expected `Option<&[u8]>`, found `&Option<Vec<u8>>`
   |                  |
   |                  expected due to this
   |
   = note:   expected enum `Option<&[u8]>`
           found reference `&Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:44:46
   |
LL |     let Some(ref mut a): Option<&mut [u8]> = some else { return };
   |                                              ^^^^ expected `Option<&mut [u8]>`, found `Option<Vec<u8>>`
   |
   = note: expected enum `Option<&mut [u8]>`
              found enum `Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:48:46
   |
LL |     let Some(ref mut a): Option<&mut [u8]> = &mut some else { return };
   |                                              ^^^^^^^^^ expected `Option<&mut [u8]>`, found `&mut Option<Vec<u8>>`
   |
   = note:           expected enum `Option<&mut [u8]>`
           found mutable reference `&mut Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:52:38
   |
LL |     let Some(a): Option<&mut [u8]> = some else { return };
   |                  -----------------   ^^^^ expected `Option<&mut [u8]>`, found `Option<Vec<u8>>`
   |                  |
   |                  expected due to this
   |
   = note: expected enum `Option<&mut [u8]>`
              found enum `Option<Vec<u8>>`

error[E0308]: mismatched types
  --> $DIR/let-else-ref-bindings.rs:55:38
   |
LL |     let Some(a): Option<&mut [u8]> = &mut some else { return };
   |                  -----------------   ^^^^^^^^^ expected `Option<&mut [u8]>`, found `&mut Option<Vec<u8>>`
   |                  |
   |                  expected due to this
   |
   = note:           expected enum `Option<&mut [u8]>`
           found mutable reference `&mut Option<Vec<u8>>`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
